2008-10-01  Zoltan Varga  <vargaz@gmail.com>

	* mini-amd64.c mini-x86.c mini-arm.c mini-ppc.c method-to-ir.c: Remove
	the workaround for byref being set on sig->ret, this does not seem to
	happen any more. Add an assert instead.

2008-09-30  Rodrigo Kumpera  <rkumpera@novell.com>

	* ir-emit.h (alloc_dreg): Write a warning before crashing.

2008-09-30  Rodrigo Kumpera  <rkumpera@novell.com>

	* mini-codegen.c: More work on macros to make them
	ready for multiple regbanks.

2008-09-30  Rodrigo Kumpera  <rkumpera@novell.com>

	* method-to.ir.c (mono_type_to_regmove): Remove static modifier.

	* mini.h: Export mono_type_to_regmove. Fix signature of mono_regname_full.

2008-09-30  Rodrigo Kumpera  <rkumpera@novell.com>

	* mini-codegen.c (mono_spillvar_offset): Proper support for
	multiple regbanks.

2008-09-30  Zoltan Varga  <vargaz@gmail.com>

	* mini-amd64.c (mono_arch_emit_epilog): Remove some duplicated code from
	the stack overflow changes.

2008-09-30  Rodrigo Kumpera  <rkumpera@novell.com>

	* mini-codegen.c: Make all bank macros depend on reg_bank.

	* mini-codegen.c (mono_local_regalloc): Make free mask
	initialization regbank aware.

2008-09-30  Rodrigo Kumpera  <rkumpera@novell.com>

	* mini-codegen.c (mono_local_regalloc): Extract callee
	mask selection to a function and make it regbank aware.

2008-09-30  Rodrigo Kumpera  <rkumpera@novell.com>

	* mini-codegen.c (mono_local_regalloc): Changed the cloberring
	code to deal with many regbanks.

2008-09-30  Zoltan Varga  <vargaz@gmail.com>

	* mini-codegen.c: More fp->regbank changes.

2008-09-29  Rodrigo Kumpera  <rkumpera@novell.com>

	* mini-codegen.c: Change asserts to use MONO_NUM_REGBANKS instead
	of a hardcoded constant.

2008-09-29  Rodrigo Kumpera  <rkumpera@novell.com>

	* method-to-ir.c (type_from_stack_type): Fix typo.

2008-09-29  Zoltan Varga  <vargaz@gmail.com>

	* mini-ia64.c (emit_move_return_value): Convert float return values to
	double.

	* objects.cs: Add a new test.
	