@@ -1,5 +1,7 @@
 2008-10-01  Zoltan Varga  <vargaz@gmail.com>
 
+	* method-to-ir.c: Remove some obsolete FIXMEs.
+
 	* mini-amd64.c mini-x86.c mini-arm.c mini-ppc.c method-to-ir.c: Remove
 	the workaround for byref being set on sig->ret, this does not seem to
 	happen any more. Add an assert instead.
